--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Chinese essays'
 - !lcc 'PL'
+- GITenberg
 title: 蘇洵集
 url: http://www.gutenberg.org/ebooks/25321
